# rust-cli-template

./: .bumpversion.cfg  .pre-commit-config.yaml  Cargo.toml  Makefile.toml
src/: main.rs
