[package]
name = "rust-cli-template"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^3.0.0-beta.2"
log = "^0.4.11"
env_logger = "^0.8.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
